# embercore-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: master.yml
configs/: server.local.yml  test-client.local.yml
models/: Cargo.toml
models/src/: protocol.rs
protocol/: auth.proto  base.proto
res/: main.lua
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
src/: client.rs  codec.rs  config.rs  connection.rs  lib.rs  main.rs  prelude.rs  state.rs
src/components/: position.rs
src/game/: mod.rs  movement.rs  player.rs
src/game/components/: mod.rs  player.rs  transform.rs  velocity.rs
src/game/resources/: mod.rs  server_clock.rs
src/game/systems/: mod.rs  movement.rs
src/peer/: mod.rs  peer.rs  peers_container.rs
src/protocol/: auth.rs  base.rs
src/tme/: color.rs  error.rs  mod.rs
src/tme/models/: chunk.rs  data_source.rs  ellipse_object.rs  entity_object.rs  frame.rs  general_object.rs  grid.rs  group_layer.rs  hexagonal_map.rs  image_layer.rs  isometric_map.rs  layer.rs  map.rs  mod.rs  object.rs  object_group_layer.rs  object_template.rs  orientation.rs  orthogonal_map.rs  point.rs  point_object.rs  polygon_object.rs  polyline_object.rs  property.rs  rectangle_object.rs  redata.rs  staggered_map.rs  terrain.rs  text.rs  text_object.rs  tile.rs  tile_layer.rs  tile_offset.rs  tileset.rs  utils.rs  wang_color.rs  wang_set.rs  wang_tile.rs
src/utils/: mod.rs
test-client/: Cargo.toml
test-client/src/: config.rs  main.rs
