[package]
name = "embercore-server"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>", "LazyMechanic <asharnrus@gmail.com>"]
edition = "2018"

[lib]
name = "embercore_server_lib"
path = "src/lib.rs"

[dependencies.embercore]
git = "https://github.com/BoringStudio/libembercore.git"

[dependencies]
async-trait = "0.1"
anyhow = "1.0.31"
bincode = { git = "https://github.com/servo/bincode.git" }
chrono = { version = "0.4.11", features = ["serde"] }
config = { version = "0.9", features = ["yaml"] }
clap = { version = "2.33" }
futures = { version = "0.3" }
log = { version = "0.4", features = ["std", "serde"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specs = "0.16.1"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }
thiserror = "1.0.20"
env_logger = "0.7"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
lazy_static = "1.4.0"

[workspace]
members = ["test-client"]